@@ -1,3 +1,7 @@
+=item 0.14 - April 27, 2008
+
+Added patch from Niko Tyni which fixes Apache::DB for use with Perl 5.10
+
 =item 0.13 - April 17, 2006 
 
 Fixed Apache::DProf and Apache::SmallProf to work when using taint mode. 
